[tool.poetry]
name = "google-form-submission"
version = "0.1.0"
description = ""
authors = ["David Hunter <dhunter@digitalcreation.co.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
